--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "homepage": "http://202.59.141.34:3030/",
   "dependencies": {
+    "@emotion/styled": "^11.10.4",
     "@fullcalendar/daygrid": "^4.4.2",
     "@fullcalendar/interaction": "^4.4.2",
     "@fullcalendar/react": "^4.4.2",
     "@fullcalendar/timegrid": "^4.4.2",
     "@lourenci/react-kanban": "^0.14.0",
+    "@react-pdf/renderer": "^3.0.0",
     "axios": "^0.21.4",
     "base-64": "^0.1.0",
     "body-scroll-lock": "^2.7.1",
@@ -64,6 +66,7 @@
     "react-masonry-component": "^6.3.0",
     "react-masonry-css": "^1.0.16",
     "react-nestable": "^1.3.0",
+    "react-pdf": "^5.7.2",
     "react-photo-gallery": "^8.0.0",
     "react-rangeslider": "^2.2.0",
     "react-rating": "^2.0.5",
