--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-router-scroll-4": "^1.0.0-beta.2",
-    "react-scripts": "3.4.4",
+    "react-scripts": "^3.4.4",
     "react-scrollbar": "^0.5.6",
     "react-select": "^4.3.1",
     "react-slick": "^0.25.2",
