--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ REACT_APP_FIREBASE_MESSAGEING_SENDER_ID="YOUR_MESSAGING_SENDER_ID"
 REACT_APP_FIREBASE_API_ID="YOUR_FIREBASE_API_ID"
 #REACT_APP_PUBLIC_URL=https://delbd.eduvess.com
 #REACT_APP_BASEURL=https://del.uddoktahub.com
-REACT_APP_BASEURL=https://delapi.eduvess.com
+REACT_APP_BASEURL=http://127.0.0.1:8000
 #REACT_APP_BASEURL=https://delbdbackend.eduvess.com
 REACT_APP_PUBLIC_URL=http://localhost:3000
-FAST_REFRESH=false
+# FAST_REFRESH=false
