--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-files": "^2.4.9",
     "react-google-charts": "^3.0.15",
     "react-hook-form": "^3.29.4",
+    "react-icons": "^4.10.1",
     "react-image-crop": "^8.6.12",
     "react-image-lightbox": "^5.1.4",
     "react-images-upload": "^1.2.8",
