--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fullcalendar/interaction": "^4.4.2",
     "@fullcalendar/react": "^4.4.2",
     "@fullcalendar/timegrid": "^4.4.2",
+    "@grapecity/activereports": "^4.1.1",
     "@lourenci/react-kanban": "^0.14.0",
     "@react-pdf/renderer": "^3.0.0",
     "axios": "^0.21.4",
